Main: Refactor code

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,5 @@ serde = { version = "1", features = ["derive"] }
 
 # thiserror = "2"
 anyhow = "1.0"
+
+mimalloc = { version = "0.1", default-features = false }
