--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ futures = "0.3"
 
 reqwest = { version = "0.12", features = ["rustls-tls", "gzip"] }
 serde_json = "1"
-serde = { version = "1", features = ["derive"] }
+serde = { version = "1", features = ["derive", "rc"] }
 
 # thiserror = "2"
 anyhow = "1.0"
