--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,19 @@ reqwest = { version = "0.12", features = ["rustls-tls", "gzip"] }
 serde_json = "1"
 serde = { version = "1", features = ["derive", "rc"] }
 
-# thiserror = "2"
+thiserror = "2"
 anyhow = "1.0"
 
-mimalloc = { version = "0.1", default-features = false }
+
+[target.'cfg(not(target_env = "msvc"))'.dependencies]
+tikv-jemallocator = { version = "0.6", features = [
+    "profiling",
+    "unprefixed_malloc_on_supported_platforms",
+] }
+
+jemalloc_pprof = { version = "0.6" }
+
+
+[profile.release-debug]
+inherits = "release"
+debug = true
