--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ poem-openapi = { version = "5", features = ["redoc"] }
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
 futures = "0.3"
 
-reqwest = { version = "0.12", features = ["rustls-tls", "gzip"] }
+reqwest = { version = "0.12", features = ["rustls-tls", "gzip", "json"] }
 serde_json = "1"
 serde = { version = "1", features = ["derive", "rc"] }
 
