Meta: Add namehistory route

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ serde = { version = "1", features = ["derive", "rc"] }
 thiserror = "2"
 anyhow = "1.0"
 
+mini-moka = "0.10"
 
 [target.'cfg(not(target_env = "msvc"))'.dependencies]
 tikv-jemallocator = { version = "0.6", features = [
